[project]
name = "actions-common"
version = "0.1.0"
dependencies = [
    "py-markdown-table==1.3.0",
    "PyYAML==6.0.2"
]

[project.scripts]
generate-workflow-docs = "scripts:generate_workflows"
generate-action-docs = "scripts:generate_actions"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.setuptools.package-data]
"scripts" = ["*"]